RESOLVED FIXED 69709
CSS 2.1 failure: height-width-table-001.htm
https://bugs.webkit.org/show_bug.cgi?id=69709
Summary CSS 2.1 failure: height-width-table-001.htm
Robert Hogan
Reported 2011-10-08 14:07:05 PDT
For divs with 'display:table' the height and width should not include the border.
Attachments
Patch (97.23 KB, patch)
2011-10-10 11:19 PDT, Robert Hogan
simon.fraser: review+
Robert Hogan
Comment 1 2011-10-10 11:19:58 PDT
Simon Fraser (smfr)
Comment 2 2011-10-11 15:05:46 PDT
Comment on attachment 110375 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=110375&action=review > LayoutTests/css2.1/20110323/abspos-containing-block-initial-001-expected.txt:4 > +layer at (0,0) size 785x10110 > + RenderView at (0,0) size 785x600 > +layer at (10,10) size 765x10100 > + RenderBlock {HTML} at (10,10) size 765x10100 [border: (20px solid #000000)] These text and pixel results need to go into a platform-specific directory (the pixel results have scrollbars). > Source/WebCore/ChangeLog:8 > + The CSS test suite expects CSS table elements to treat fixed height/width as s/The CSS test suite/CSS 2.1
Robert Hogan
Comment 3 2011-10-15 04:32:13 PDT
Note You need to log in before you can comment on or make changes to this bug.